--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ beautifulsoup4==4.14.3
     # via yfinance
 blinker==1.9.0
     # via streamlit
+build==1.4.0
+    # via ta-lib
 cachetools==6.2.4
     # via streamlit
 certifi==2026.1.4
@@ -30,16 +32,26 @@ charset-normalizer==3.4.4
     # via requests
 click==8.3.1
     # via streamlit
-colorama==0.4.6 ; sys_platform == 'win32'
-    # via click
+colorama==0.4.6 ; os_name == 'nt' or sys_platform == 'win32'
+    # via
+    #   build
+    #   click
+contourpy==1.3.2 ; python_full_version < '3.11'
+    # via matplotlib
+contourpy==1.3.3 ; python_full_version >= '3.11'
+    # via matplotlib
 curl-cffi==0.13.0
     # via yfinance
+cycler==0.12.1
+    # via matplotlib
 distro==1.9.0
     # via google-genai
 dotenv==0.9.9
     # via financial-insight-widget
 exceptiongroup==1.3.1 ; python_full_version < '3.11'
     # via anyio
+fonttools==4.61.1
+    # via matplotlib
 frozendict==2.4.7
     # via yfinance
 gitdb==4.0.12
@@ -55,22 +67,54 @@ h11==0.16.0
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
-    # via google-genai
+    # via
+    #   google-genai
+    #   langgraph-sdk
+    #   langsmith
 idna==3.11
     # via
     #   anyio
     #   httpx
     #   requests
+importlib-metadata==8.7.1 ; python_full_version < '3.10.2'
+    # via build
 jinja2==3.1.6
     # via
     #   altair
     #   pydeck
+jsonpatch==1.33
+    # via langchain-core
+jsonpointer==3.0.0
+    # via jsonpatch
 jsonschema==4.26.0
     # via altair
 jsonschema-specifications==2025.9.1
     # via jsonschema
+kiwisolver==1.4.9
+    # via matplotlib
+langchain-core==1.2.7
+    # via
+    #   langgraph
+    #   langgraph-checkpoint
+    #   langgraph-prebuilt
+langgraph==1.0.7
+    # via financial-insight-widget
+langgraph-checkpoint==4.0.0
+    # via
+    #   langgraph
+    #   langgraph-prebuilt
+langgraph-prebuilt==1.0.7
+    # via langgraph
+langgraph-sdk==0.3.3
+    # via langgraph
+langsmith==0.6.4
+    # via langchain-core
+lxml==6.0.2
+    # via financial-insight-widget
 markupsafe==3.0.3
     # via jinja2
+matplotlib==3.10.8
+    # via financial-insight-widget
 multitasking==0.0.12
     # via yfinance
 narwhals==2.15.0
@@ -79,21 +123,37 @@ narwhals==2.15.0
     #   plotly
 numpy==2.2.6 ; python_full_version < '3.11'
     # via
+    #   contourpy
+    #   matplotlib
     #   pandas
     #   pandas-stubs
     #   pydeck
     #   streamlit
+    #   ta-lib
     #   yfinance
 numpy==2.4.1 ; python_full_version >= '3.11'
     # via
+    #   contourpy
+    #   matplotlib
     #   pandas
     #   pandas-stubs
     #   pydeck
     #   streamlit
+    #   ta-lib
     #   yfinance
-packaging==26.0
+orjson==3.11.5
+    # via
+    #   langgraph-sdk
+    #   langsmith
+ormsgpack==1.12.2
+    # via langgraph-checkpoint
+packaging==25.0
     # via
     #   altair
+    #   build
+    #   langchain-core
+    #   langsmith
+    #   matplotlib
     #   plotly
     #   streamlit
 pandas==2.3.3
@@ -106,7 +166,9 @@ pandas-stubs==2.3.3.260113
 peewee==3.19.0
     # via yfinance
 pillow==12.1.0
-    # via streamlit
+    # via
+    #   matplotlib
+    #   streamlit
 platformdirs==4.5.1
     # via yfinance
 plotly==6.5.2
@@ -126,19 +188,31 @@ pyasn1-modules==0.4.2
 pycparser==3.0 ; implementation_name != 'PyPy'
     # via cffi
 pydantic==2.12.5
-    # via google-genai
+    # via
+    #   google-genai
+    #   langchain-core
+    #   langgraph
+    #   langsmith
 pydantic-core==2.41.5
     # via pydantic
 pydeck==0.9.1
     # via streamlit
+pyparsing==3.3.2
+    # via matplotlib
+pyproject-hooks==1.2.0
+    # via build
 python-dateutil==2.9.0.post0
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 python-dotenv==1.2.1
     # via dotenv
 pytz==2025.2
     # via
     #   pandas
     #   yfinance
+pyyaml==6.0.3
+    # via langchain-core
 referencing==0.37.0
     # via
     #   jsonschema
@@ -148,8 +222,12 @@ requests==2.32.5
     #   financial-insight-widget
     #   google-auth
     #   google-genai
+    #   langsmith
+    #   requests-toolbelt
     #   streamlit
     #   yfinance
+requests-toolbelt==1.0.0
+    # via langsmith
 rpds-py==0.30.0
     # via
     #   jsonschema
@@ -166,12 +244,17 @@ soupsieve==2.8.3
     # via beautifulsoup4
 streamlit==1.53.1
     # via financial-insight-widget
+ta-lib==0.6.8
+    # via financial-insight-widget
 tenacity==9.1.2
     # via
     #   google-genai
+    #   langchain-core
     #   streamlit
 toml==0.10.2
     # via streamlit
+tomli==2.4.0 ; python_full_version < '3.11'
+    # via build
 tornado==6.5.4
     # via streamlit
 types-pytz==2025.2.0.20251108
@@ -183,6 +266,7 @@ typing-extensions==4.15.0
     #   beautifulsoup4
     #   exceptiongroup
     #   google-genai
+    #   langchain-core
     #   pydantic
     #   pydantic-core
     #   referencing
@@ -194,11 +278,21 @@ tzdata==2025.3
     # via pandas
 urllib3==2.6.3
     # via requests
+uuid-utils==0.14.0
+    # via
+    #   langchain-core
+    #   langsmith
 watchdog==6.0.0 ; sys_platform != 'darwin'
     # via streamlit
 websockets==15.0.1
     # via
     #   google-genai
     #   yfinance
+xxhash==3.6.0
+    # via langgraph
 yfinance==1.1.0
     # via financial-insight-widget
+zipp==3.23.0 ; python_full_version < '3.10.2'
+    # via importlib-metadata
+zstandard==0.25.0
+    # via langsmith
