--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ anyio==4.12.1
     # via
     #   google-genai
     #   httpx
+appnope==0.1.4 ; sys_platform == 'darwin'
+    # via ipykernel
+asttokens==3.0.1
+    # via stack-data
 attrs==25.4.0
     # via
     #   jsonschema
@@ -23,11 +27,14 @@ cachetools==6.2.4
 certifi==2026.1.4
     # via
     #   curl-cffi
+    #   financial-insight-widget
     #   httpcore
     #   httpx
     #   requests
 cffi==2.0.0
-    # via curl-cffi
+    # via
+    #   curl-cffi
+    #   pyzmq
 charset-normalizer==3.4.4
     # via requests
 click==8.3.1
@@ -36,6 +43,9 @@ colorama==0.4.6 ; os_name == 'nt' or sys_platform == 'win32'
     # via
     #   build
     #   click
+    #   ipython
+comm==0.2.3
+    # via ipykernel
 contourpy==1.3.2 ; python_full_version < '3.11'
     # via matplotlib
 contourpy==1.3.3 ; python_full_version >= '3.11'
@@ -44,12 +54,20 @@ curl-cffi==0.13.0
     # via yfinance
 cycler==0.12.1
     # via matplotlib
+debugpy==1.8.19
+    # via ipykernel
+decorator==5.2.1
+    # via ipython
 distro==1.9.0
     # via google-genai
 dotenv==0.9.9
     # via financial-insight-widget
 exceptiongroup==1.3.1 ; python_full_version < '3.11'
-    # via anyio
+    # via
+    #   anyio
+    #   ipython
+executing==2.2.1
+    # via stack-data
 fonttools==4.61.1
     # via matplotlib
 frozendict==2.4.7
@@ -78,6 +96,16 @@ idna==3.11
     #   requests
 importlib-metadata==8.7.1 ; python_full_version < '3.10.2'
     # via build
+ipykernel==7.1.0
+    # via financial-insight-widget
+ipython==8.38.0 ; python_full_version < '3.11'
+    # via ipykernel
+ipython==9.9.0 ; python_full_version >= '3.11'
+    # via ipykernel
+ipython-pygments-lexers==1.1.1 ; python_full_version >= '3.11'
+    # via ipython
+jedi==0.19.2
+    # via ipython
 jinja2==3.1.6
     # via
     #   altair
@@ -90,6 +118,12 @@ jsonschema==4.26.0
     # via altair
 jsonschema-specifications==2025.9.1
     # via jsonschema
+jupyter-client==8.8.0
+    # via ipykernel
+jupyter-core==5.9.1
+    # via
+    #   ipykernel
+    #   jupyter-client
 kiwisolver==1.4.9
     # via matplotlib
 langchain-core==1.2.7
@@ -115,12 +149,18 @@ markupsafe==3.0.3
     # via jinja2
 matplotlib==3.10.8
     # via financial-insight-widget
+matplotlib-inline==0.2.1
+    # via
+    #   ipykernel
+    #   ipython
 multitasking==0.0.12
     # via yfinance
 narwhals==2.15.0
     # via
     #   altair
     #   plotly
+nest-asyncio==1.6.0
+    # via ipykernel
 numpy==2.2.6 ; python_full_version < '3.11'
     # via
     #   contourpy
@@ -151,6 +191,7 @@ packaging==25.0
     # via
     #   altair
     #   build
+    #   ipykernel
     #   langchain-core
     #   langsmith
     #   matplotlib
@@ -160,23 +201,38 @@ pandas==2.3.3
     # via
     #   financial-insight-widget
     #   streamlit
+    #   streamlit-aggrid
     #   yfinance
 pandas-stubs==2.3.3.260113
     # via financial-insight-widget
+parso==0.8.5
+    # via jedi
 peewee==3.19.0
     # via yfinance
+pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'
+    # via ipython
 pillow==12.1.0
     # via
     #   matplotlib
     #   streamlit
 platformdirs==4.5.1
-    # via yfinance
+    # via
+    #   jupyter-core
+    #   yfinance
 plotly==6.5.2
     # via financial-insight-widget
+prompt-toolkit==3.0.52
+    # via ipython
 protobuf==6.33.4
     # via
     #   streamlit
     #   yfinance
+psutil==7.2.1
+    # via ipykernel
+ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'
+    # via pexpect
+pure-eval==0.2.3
+    # via stack-data
 pyarrow==23.0.0
     # via streamlit
 pyasn1==0.6.2
@@ -197,14 +253,21 @@ pydantic-core==2.41.5
     # via pydantic
 pydeck==0.9.1
     # via streamlit
+pygments==2.19.2
+    # via
+    #   ipython
+    #   ipython-pygments-lexers
 pyparsing==3.3.2
     # via matplotlib
 pyproject-hooks==1.2.0
     # via build
 python-dateutil==2.9.0.post0
     # via
+    #   jupyter-client
     #   matplotlib
     #   pandas
+python-decouple==3.8
+    # via streamlit-aggrid
 python-dotenv==1.2.1
     # via dotenv
 pytz==2025.2
@@ -213,6 +276,10 @@ pytz==2025.2
     #   yfinance
 pyyaml==6.0.3
     # via langchain-core
+pyzmq==27.1.0
+    # via
+    #   ipykernel
+    #   jupyter-client
 referencing==0.37.0
     # via
     #   jsonschema
@@ -242,7 +309,13 @@ sniffio==1.3.1
     # via google-genai
 soupsieve==2.8.3
     # via beautifulsoup4
+stack-data==0.6.3
+    # via ipython
 streamlit==1.53.1
+    # via
+    #   financial-insight-widget
+    #   streamlit-aggrid
+streamlit-aggrid==1.2.1.post2
     # via financial-insight-widget
 ta-lib==0.6.8
     # via financial-insight-widget
@@ -256,7 +329,17 @@ toml==0.10.2
 tomli==2.4.0 ; python_full_version < '3.11'
     # via build
 tornado==6.5.4
-    # via streamlit
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   streamlit
+traitlets==5.14.3
+    # via
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
 types-pytz==2025.2.0.20251108
     # via pandas-stubs
 typing-extensions==4.15.0
@@ -266,6 +349,7 @@ typing-extensions==4.15.0
     #   beautifulsoup4
     #   exceptiongroup
     #   google-genai
+    #   ipython
     #   langchain-core
     #   pydantic
     #   pydantic-core
@@ -284,6 +368,8 @@ uuid-utils==0.14.0
     #   langsmith
 watchdog==6.0.0 ; sys_platform != 'darwin'
     # via streamlit
+wcwidth==0.3.5
+    # via prompt-toolkit
 websockets==15.0.1
     # via
     #   google-genai
