add initial project structure and configuration files

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@
 #    uv export --format requirements-txt --no-hashes
 altair==6.0.0
     # via streamlit
+annotated-doc==0.0.4
+    # via fastapi
 annotated-types==0.7.0
     # via pydantic
 anyio==4.12.1
     # via
     #   google-genai
     #   httpx
+    #   starlette
 appnope==0.1.4 ; sys_platform == 'darwin'
     # via ipykernel
 asttokens==3.0.1
@@ -33,12 +36,15 @@ certifi==2026.1.4
     #   requests
 cffi==2.0.0
     # via
+    #   cryptography
     #   curl-cffi
     #   pyzmq
 charset-normalizer==3.4.4
     # via requests
 click==8.3.1
-    # via streamlit
+    # via
+    #   streamlit
+    #   uvicorn
 colorama==0.4.6 ; os_name == 'nt' or sys_platform == 'win32'
     # via
     #   build
@@ -50,6 +56,8 @@ contourpy==1.3.2 ; python_full_version < '3.11'
     # via matplotlib
 contourpy==1.3.3 ; python_full_version >= '3.11'
     # via matplotlib
+cryptography==46.0.5
+    # via pyopenssl
 curl-cffi==0.13.0
     # via yfinance
 cycler==0.12.1
@@ -68,6 +76,8 @@ exceptiongroup==1.3.1 ; python_full_version < '3.11'
     #   ipython
 executing==2.2.1
     # via stack-data
+fastapi==0.131.0
+    # via financial-insight-widget
 fonttools==4.61.1
     # via matplotlib
 frozendict==2.4.7
@@ -81,7 +91,9 @@ google-auth==2.47.0
 google-genai==1.60.0
     # via financial-insight-widget
 h11==0.16.0
-    # via httpcore
+    # via
+    #   httpcore
+    #   uvicorn
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
@@ -243,8 +255,11 @@ pyasn1-modules==0.4.2
     # via google-auth
 pycparser==3.0 ; implementation_name != 'PyPy'
     # via cffi
+pycryptodomex==3.23.0
+    # via python-alipay-sdk
 pydantic==2.12.5
     # via
+    #   fastapi
     #   google-genai
     #   langchain-core
     #   langgraph
@@ -257,10 +272,14 @@ pygments==2.19.2
     # via
     #   ipython
     #   ipython-pygments-lexers
+pyopenssl==25.3.0
+    # via python-alipay-sdk
 pyparsing==3.3.2
     # via matplotlib
 pyproject-hooks==1.2.0
     # via build
+python-alipay-sdk==3.4.0
+    # via financial-insight-widget
 python-dateutil==2.9.0.post0
     # via
     #   jupyter-client
@@ -311,6 +330,8 @@ soupsieve==2.8.3
     # via beautifulsoup4
 stack-data==0.6.3
     # via ipython
+starlette==0.52.1
+    # via fastapi
 streamlit==1.53.1
     # via
     #   financial-insight-widget
@@ -347,17 +368,24 @@ typing-extensions==4.15.0
     #   altair
     #   anyio
     #   beautifulsoup4
+    #   cryptography
     #   exceptiongroup
+    #   fastapi
     #   google-genai
     #   ipython
     #   langchain-core
     #   pydantic
     #   pydantic-core
+    #   pyopenssl
     #   referencing
+    #   starlette
     #   streamlit
     #   typing-inspection
+    #   uvicorn
 typing-inspection==0.4.2
-    # via pydantic
+    # via
+    #   fastapi
+    #   pydantic
 tzdata==2025.3
     # via pandas
 urllib3==2.6.3
@@ -366,6 +394,8 @@ uuid-utils==0.14.0
     # via
     #   langchain-core
     #   langsmith
+uvicorn==0.41.0
+    # via financial-insight-widget
 watchdog==6.0.0 ; sys_platform != 'darwin'
     # via streamlit
 wcwidth==0.3.5
